# ai-workflow-kit

./: .hintrc  AGENTS.md  README.md  goal.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop/e2e/: canvas-drag.spec.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 0001_initial.sql
apps/desktop/src-tauri/src/: agent_runtime.rs  http_health_runtime.rs  lib.rs  main.rs  persistence.rs  quota_runtime.rs
apps/desktop/src/app/: RootWorkbench.tsx
apps/desktop/src/canvas/: FlowgramCanvasTools.tsx  FlowgramMinimap.tsx  FlowgramWorkflowNode.tsx  RootCanvas.tsx  flowgramComponentNode.test.ts  flowgramComponentNode.ts  flowgramInitialData.test.ts  flowgramInitialData.ts  flowgramNodeForm.ts  (+7 more)
docs/: local-development.md
rules/: README.md  ci-cd.md  comment-style.md  dependency-policy.md  react-ui.md  scaffolding.md  security.md  subagents.md
skills/workflow-component/: SKILL.md
skills/workflow-component/agents/: openai.yaml
skills/workflow-component/references/: component-blueprint.md
specs/: 00-execution-loop.md  01-product-scope.md  02-architecture.md  03-canvas.md  04-component-sdk.md  05-persistence.md  06-agent-runtime.md  07-ui-shell.md  08-codex-skill.md  09-testing.md  10-initialization.md  11-project-rules-and-ci.md  12-v1-components.md
(+27 files in other folders)
